Abstracting HTML structures -- NOT production-ready

--- a/css/_colors.scss
+++ b/css/_colors.scss
@@ -1,10 +1,12 @@
 /* colors for VOA blogs */
 
-$voablue:  #1330bf;
-$voared:   #d41010;
-$voagray:  #919191;
+$voablue:   #1330bf;
+$voared:    #d41010;
+$voagray:   #919191;
 
-$offwhite: #fcfcfc;
-$offblack: #333333;
+$offwhite:  #fcfcfc;
+$offblack:  #333333;
 
-$bodybg:   #eeeeee;
+$bodybg:    #eeeeee;
+
+$highlight: #7fdbff;
