--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,10 @@
 /*
-Theme Name: VOA Top Content
+Theme Name:   VOA Top Content
+Theme URI:    https://github.com/pp19dd/voa-top-content
+Description:  Custom theme for VOA Blogs
+Author:       Stephen Mekosh and Dino Beslagic
+Author URI:   https://www.voanews.com/
+Version:      2.0
 */
 
 
@@ -104,6 +109,30 @@ img {
 	background-color: $bodybg;
 	color: $voablue;
 }
+
+
+
+
+
+.content > *:not(.wp-caption) {
+	margin: 0 .5rem 1em .5rem;
+}
+
+.wp-caption {
+	max-width: 100%;
+	margin-bottom: 1em;
+	width: 100% !important;
+}
+
+.wp-caption-text {
+	font-size: .8rem;
+	margin: .25em .5rem;
+}
+
+
+
+
+
 
 /* ======================================================================== */
 
