Added "Hero" meta field option for posts - NOT production ready

--- a/css/_colors.scss
+++ b/css/_colors.scss
@@ -5,8 +5,10 @@ $voared:    #d41010;
 $voagray:   #919191;
 
 $offwhite:  #fcfcfc;
-$offblack:  #333333;
+$offblack:  #333;
 
-$bodybg:    #eeeeee;
+$bodybg:    #eee;
 
 $highlight: #7fdbff;
+
+$lightgray: #ddd;
